--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@netlify/functions": "^1.0.0",
     "axios": "^0.26.1",
+    "jszip": "^3.7.1",
     "sirv-cli": "^2.0.2"
   }
 }
