--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "rollup": "^2.70.1",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-polyfill-node": "^0.8.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.46.4",
@@ -30,6 +31,7 @@
     "@netlify/functions": "^1.0.0",
     "axios": "^0.26.1",
     "jszip": "^3.7.1",
+    "pixi.js": "^6.3.0",
     "sirv-cli": "^2.0.2"
   }
 }
