--- a/package.json
+++ b/package.json
@@ -9,17 +9,35 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "icons": "fantasticon",
     "test": "jest --config ./jest.config.js ./src/testing/*.test.ts",
-    "test-run": "pnpm test && pnpm dev"
+    "test-run": "pnpm test && pnpm dev",
+    "storybook:start": "start-storybook",
+    "storybook:build": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "7",
     "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
+    "@storybook/addon-essentials": "^6.4.20",
+    "@storybook/addon-links": "^6.4.20",
+    "@storybook/addon-svelte-csf": "^1.1.0",
+    "@storybook/addons": "^6.4.20",
+    "@storybook/api": "^6.4.20",
+    "@storybook/cli": "^6.4.20",
+    "@storybook/client-api": "^6.4.20",
+    "@storybook/client-logger": "^6.4.20",
+    "@storybook/components": "^6.4.20",
+    "@storybook/core-events": "^6.4.20",
+    "@storybook/svelte": "^6.4.20",
+    "@storybook/theming": "^6.4.20",
     "@tsconfig/svelte": "^3.0.0",
     "@types/jest": "^27.4.1",
+    "babel-loader": "^8.2.4",
     "fantasticon": "^1.2.3",
     "jest": "^27.5.1",
+    "react": "17",
+    "react-dom": "17",
     "rollup": "^2.70.1",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.5",
@@ -28,9 +46,11 @@
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.6",
+    "svelte-loader": "^3.1.2",
     "svelte-preprocess": "^4.10.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "webpack": "^5.71.0"
   },
   "dependencies": {
     "@netlify/functions": "^1.0.0",
