feat: approach circles

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "jest",
     "test-run": "pnpm test && pnpm dev",
     "storybook:start": "start-storybook",
-    "storybook:build": "build-storybook"
+    "storybook:build": "build-storybook",
+    "postinstall": "patch-package"
   },
   "devDependencies": {
     "@babel/core": "7",
