--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "isolatedModules": false,
     "preserveValueImports": false,
     "lib": ["dom", "dom.iterable", "esnext"],
-    "types": ["jest"]
+    "types": ["jest", "node"]
   },
   "include": ["src/**/*", "tests/**/*"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
