--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@storybook/theming": "^6.4.20",
     "@tsconfig/svelte": "^3.0.0",
     "@types/bezier-js": "^4.1.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "babel-loader": "^8.2.4",
@@ -59,6 +60,7 @@
     "@netlify/functions": "^1.0.0",
     "axios": "^0.26.1",
     "bezier-js": "^6.1.0",
+    "file-saver": "^2.0.5",
     "jszip": "^3.7.1",
     "pixi.js": "^6.3.0",
     "sirv-cli": "^2.0.2",
