--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "test-run": "pnpm test && pnpm dev",
     "dotenv-run": "dotenv pnpm dev",
     "storybook:start": "start-storybook",
-    "storybook:build": "build-storybook",
-    "postinstall": "patch-package"
+    "storybook:build": "build-storybook"
   },
   "devDependencies": {
     "@babel/core": "7",
@@ -49,22 +48,23 @@
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "sirv-cli": "^2.0.2",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.6",
     "svelte-loader": "^3.1.2",
     "svelte-preprocess": "^4.10.4",
+    "ts-jest": "^27.1.4",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2",
     "webpack": "^5.71.0"
   },
   "dependencies": {
     "@netlify/functions": "^1.0.0",
+    "@propero/easy-store": "^1.1.0",
     "axios": "^0.26.1",
     "bezier-js": "^6.1.0",
     "file-saver": "^2.0.5",
     "jszip": "^3.7.1",
-    "pixi.js": "^6.3.0",
-    "sirv-cli": "^2.0.2",
-    "ts-jest": "^27.1.4"
+    "pixi.js": "^6.3.0"
   }
 }
