--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,21 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "importsNotUsedAsValues": "preserve",
     "isolatedModules": false,
     "preserveValueImports": false,
     "lib": ["dom", "dom.iterable", "esnext"],
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "paths": {
+      "src/*": ["src/*"],
+      "functions/*": ["functions/*"],
+      "tests/*": ["tests/*"]
+    },
+    "baseUrl": "./"
   },
   "include": ["src/**/*", "tests/**/*"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
