--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "bezier-js": "^6.1.0",
     "file-saver": "^2.0.5",
     "jszip": "^3.7.1",
-    "pixi.js": "^6.3.0"
+    "pixi.js": "^6.3.0",
+    "svelte-portal": "^2.1.2"
   }
 }
