--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "7",
     "@babel/preset-env": "^7.16.11",
+    "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
@@ -34,6 +35,7 @@
     "@storybook/theming": "^6.4.20",
     "@tsconfig/svelte": "^3.0.0",
     "@types/bezier-js": "^4.1.0",
+    "@types/black-engine": "^0.5.1",
     "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
@@ -63,9 +65,10 @@
     "@propero/easy-store": "^1.1.0",
     "axios": "^0.26.1",
     "bezier-js": "^6.1.0",
+    "black-engine": "^0.5.16",
+    "black-spine": "^1.0.0",
     "file-saver": "^2.0.5",
     "jszip": "^3.7.1",
-    "pixi.js": "^6.3.0",
     "svelte-portal": "^2.1.2"
   }
 }
