--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "rollup -c && pnpm run icons",
-    "dev": "rollup -c -w",
+    "dev": "pnpm run icons && rollup -c -w",
     "start": "sirv public --no-clear -s",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "icons": "fantasticon",
